--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         </div>
         <div class="zoom-box">
           <strong>Screenshot:</strong><br>
-          <img src="your-screenshot-path.jpg" alt="Retail Sales Screenshot">
+          <img src="Excel-project1.png" alt="Retail Sales Screenshot">
         </div>
       </div>
     </div>
