--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
     <div class="accordion">
         <div class="accordion-header" onclick="toggleAccordion(this)">
-          Project 2: Retail Sales Analysis <span class="icon">▶</span>
+          Project 2: Bike Sales Analysis <span class="icon">▶</span>
         </div>
         <div class="accordion-content">
           <div class="zoom-box">
@@ -126,10 +126,14 @@
           <div class="zoom-box">
             <strong>Project Summary:</strong>
             <ul>
-              <li>Converted the raw data into an Excel table for better management and analysis</li>
-              <li>Applied the Filter function to sort the ‘Age’ column from largest to smallest</li>
-              <li>Used the <code>SUM</code> function to calculate the total commission earned</li>
-              <li>Applied the <code>AVERAGE</code> function to determine the average commission value</li>
+              <li>The bicycle sales company wants to determine the purchasing patterns of different 
+demographic groups to identify areas where it needs to concentrate its marketing 
+efforts. The company also wants to see if there are purchasing differences between the 
+countries where it operates.</li>
+              <li>Pivot tables can reveal useful information in records or data that is not obvious at first 
+sight by summarising and re-presenting the data so trends can be explored and 
+reported. Pivot tables extract meaning from the data by grouping it in different ways, 
+enabling useful conclusions to be made.</li>
             </ul>
           </div>
           <div class="zoom-box">
