--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         </div>
         <div class="accordion-content">
           <div class="zoom-box">
-            <strong>Dataset used:</strong> <code>retail_sales_dataset.xlsx</code>
+            <strong>Dataset used:</strong> <code>Day_3_Task_1_Bike_Sales_Pivot_Lab.xlsx</code>
           </div>
           <div class="zoom-box">
             <strong>Project Summary:</strong>
@@ -138,8 +138,7 @@ enabling useful conclusions to be made.</li>
           </div>
           <div class="zoom-box">
             <strong>Screenshot:</strong><br>
-            <img src="https://github.com/user-attachments/assets/8eb02962-4bdc-461c-8dcb-67863be2b56f
-" alt="Bike Sales Screenshot">
+            <img src="https://github.com/user-attachments/assets/8eb02962-4bdc-461c-8dcb-67863be2b56f" alt="Bike Sales Screenshot">
             <img src="https://github.com/user-attachments/assets/6c37a3e5-7b49-43a0-a9d6-0bb52c9b7d68" alt="Bike Sales Screenshot">
             <img src="https://github.com/user-attachments/assets/276d3baa-7bb0-451c-b207-73c94bd84c3d" alt="Bike Sales Screenshot">
           </div>
