--- a/index.html
+++ b/index.html
@@ -97,7 +97,8 @@
       </div>
       <div class="accordion-content">
         <div class="zoom-box">
-          <strong>Dataset used:</strong> <code>retail_sales_dataset.xlsx</code>
+          <strong>Dataset used:</strong> <code>retail_sales_dataset.xlsx</code><br>
+          Please refer my <a href='https://github.com/logambigaik/Excel-data-analysis-project'>github</a>for the dataset.
         </div>
         <div class="zoom-box">
           <strong>Project Summary:</strong>
@@ -121,7 +122,8 @@
         </div>
         <div class="accordion-content">
           <div class="zoom-box">
-            <strong>Dataset used:</strong> <code>Day_3_Task_1_Bike_Sales_Pivot_Lab.xlsx</code>
+            <strong>Dataset used:</strong> <code>Day_3_Task_1_Bike_Sales_Pivot_Lab.xlsx</code><br>
+            Please refer my <a href='https://github.com/logambigaik/Excel-data-analysis-project'>github</a>for the dataset.
           </div>
           <div class="zoom-box">
             <strong>Project Summary:</strong>
@@ -152,20 +154,20 @@ enabling useful conclusions to be made.</li>
         </div>
         <div class="accordion-content">
           <div class="zoom-box">
-            <strong>Dataset used:</strong> <code>retail_sales_dataset.xlsx</code>
+            <strong>Dataset used:</strong> <code>Day_3_Task_1_Bike_Sales.xlsx</code><br>
+            Please refer my <a href='https://github.com/logambigaik/Excel-data-analysis-project'>github</a>for the dataset.
           </div>
           <div class="zoom-box">
             <strong>Project Summary:</strong>
-            <ul>
-              <li>Converted the raw data into an Excel table for better management and analysis</li>
-              <li>Applied the Filter function to sort the ‘Age’ column from largest to smallest</li>
-              <li>Used the <code>SUM</code> function to calculate the total commission earned</li>
-              <li>Applied the <code>AVERAGE</code> function to determine the average commission value</li>
+            <ul>The dataset below tracks the sales performance of different products in various counties in England
+              <li>Create a Pivot Table to summarise the data by county and product. </li>
+              <li>Use the SWITCH function to categorise products based on their sales volume. </li>
             </ul>
           </div>
           <div class="zoom-box">
             <strong>Screenshot:</strong><br>
-            <img src="your-screenshot-path.jpg" alt="Retail Sales Screenshot">
+            <img src="https://github.com/user-attachments/assets/9c2fa87b-a55b-40f1-8e9b-3741af82a9dc" alt="Retail Sales Screenshot">
+            <img src="https://github.com/user-attachments/assets/9d84d8de-c6b3-4edd-9702-9e8398c9bae9" alt="Retail Sales Screenshot">
           </div>
         </div>
       </div>
