--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       background-color: #24548c;
     }
 
-    .accordion-content {
+    .accordion-content, .a {
       max-height: 0;
       overflow: hidden;
       transition: max-height 0.4s ease;
@@ -150,7 +150,7 @@ enabling useful conclusions to be made.</li>
 
       <div class="accordion">
         <div class="accordion-header" onclick="toggleAccordion(this)">
-          Project 3: Retail Sales Analysis <span class="icon">▶</span>
+          Project 3: Product Sales Analysis <span class="icon">▶</span>
         </div>
         <div class="accordion-content">
           <div class="zoom-box">
