--- a/index.html
+++ b/index.html
@@ -85,6 +85,15 @@
     .icon.rotate {
       transform: rotate(90deg);
     }
+
+    .screenshot-scroll {
+  max-height: 300px;       /* Adjust height as needed */
+  overflow: auto;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  padding: 10px;
+  background-color: #f9fafb;
+  }
   </style>
 </head>
 <body>
@@ -140,6 +149,7 @@ enabling useful conclusions to be made.</li>
           </div>
           <div class="zoom-box">
             <strong>Screenshot:</strong><br>
+             <div class="screenshot-scroll">
             <img src="https://github.com/user-attachments/assets/6c37a3e5-7b49-43a0-a9d6-0bb52c9b7d68" alt="Bike Sales Screenshot">
             <img src="https://github.com/user-attachments/assets/276d3baa-7bb0-451c-b207-73c94bd84c3d" alt="Bike Sales Screenshot">
             <img src="https://github.com/user-attachments/assets/8eb02962-4bdc-461c-8dcb-67863be2b56f" alt="Bike Sales Screenshot"> 
@@ -166,8 +176,10 @@ enabling useful conclusions to be made.</li>
           </div>
           <div class="zoom-box">
             <strong>Screenshot:</strong><br>
-            <img src="https://github.com/user-attachments/assets/9c2fa87b-a55b-40f1-8e9b-3741af82a9dc" alt="Retail Sales Screenshot">
-            <img src="https://github.com/user-attachments/assets/9d84d8de-c6b3-4edd-9702-9e8398c9bae9" alt="Retail Sales Screenshot">
+             <div class="screenshot-scroll">
+              <img src="https://github.com/user-attachments/assets/9c2fa87b-a55b-40f1-8e9b-3741af82a9dc" alt="Retail Sales Screenshot">
+              <img src="https://github.com/user-attachments/assets/9d84d8de-c6b3-4edd-9702-9e8398c9bae9" alt="Retail Sales Screenshot">
+             </div>
           </div>
         </div>
       </div>
